    we were missing prompt information so we got a backtrace.
  * ud-info: Warn when we don't have a prompt string for
    attributes on startup.
  * ud-info: Change the "retired" status to "inactive".
    inactive covers memorial, removed, expelled more clearly.
  * userdir_gpg.py
    - do not use SIGEXPIRED, it's deprecated
    - use EXPKEYSIG to tell if a signature is made by an expired key.

 -- Peter Palfrader <weasel@debian.org>  Tue, 08 Jul 2008 14:17:57 +0200

userdir-ldap (0.3.33) unstable; urgency=low

  * add "security simple_bind=128" to sample slapd.conf.
  * ud-info: Only show "Lock account" in root mode.
  * ud-info: Add "retire developer" option that sets
    accountStatus properly to either retiring, retired, memorial
    or active.  Active is for all currently active developers,
    memorial is for those who have passed away and whose accounts
    will never be reused, retiring is a developer who is retired
    but still receives mail at their @debian.org address.  After
    a few months they should move on to retired, with their mail
    also disabled.  accountStatus is just a freeform text, but
    these 4 options should be the only ones that exist.
  * Allow setting of gender in ud-mailgate.  Based on patch by Bernhard
    R. Link.
  * Add userdir-ldap-slapd.conf, a snipped to be included in slapd.conf
    to the package.

 -- Peter Palfrader <weasel@debian.org>  Mon, 23 Jun 2008 22:59:02 +0200

userdir-ldap (0.3.32) unstable; urgency=low

  * Do SSL when connecting to the ldap server.

 -- Peter Palfrader <weasel@debian.org>  Fri, 23 May 2008 23:50:03 +0200

userdir-ldap (0.3.31) unstable; urgency=low

  [ Joerg Jaspert ]
  * Use sync_keyrings from config file in ud-generate instead of a
    hardcoded list
  * Use add_keyrings from config file in ud-useradd instead of a
    hardcoded list
  * Use ud-config to get the emailappend value in ud-replicate, no longer
    hardcoding @debian.org

  [ Stephen Gran ]