@@ -9,8 +9,10 @@ userdir-ldap (0.3.XX) unstable; urgency=low
   * userdir_gpg.py
     - do not use SIGEXPIRED, it's deprecated
     - use EXPKEYSIG to tell if a signature is made by an expired key.
+    - Check that the primary key is not expired, even if we get a
+      GOODSIG status from gnupg.  Based on patch by Jeremy T. Bouse.
 
- -- Peter Palfrader <weasel@debian.org>  Tue, 08 Jul 2008 14:17:57 +0200
+ -- Peter Palfrader <weasel@debian.org>  Tue, 08 Jul 2008 14:27:26 +0200
 
 userdir-ldap (0.3.33) unstable; urgency=low
 
